# synister_banc

./: .zenodo.json  README.md
resnet_18/: README.md  pyproject.toml
resnet_18/config/: config.yaml
resnet_18/config/data/: banc.yaml
resnet_18/config/train/: base_train.yaml
resnet_18/scripts/: 01_split_data.py  02_train.py  03_inference.py  03_inference_val.py  loss.py  resnet_18.py
resnet_18/scripts/outputs/2025-07-03/07-49-59/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-03/15-59-02/.hydra/: hydra.yaml
resnet_18/scripts/outputs/2025-07-06/23-59-45/.hydra/: hydra.yaml
resnet_18/scripts/outputs/2025-07-07/00-00-01/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/09-16-30/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/10-34-37/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/11-16-21/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/12-25-51/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/12-39-59/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/13-20-00/.hydra/: hydra.yaml
resnet_18/scripts/outputs/2025-07-07/13-20-36/.hydra/: hydra.yaml
resnet_18/scripts/outputs/2025-07-07/13-24-58/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/13-26-22/.hydra/: hydra.yaml
resnet_18/scripts/outputs/2025-07-07/13-43-56/.hydra/: config.yaml  hydra.yaml
resnet_18/scripts/outputs/2025-07-07/13-45-11/.hydra/: hydra.yaml
resnet_18/scripts/outputs/2025-07-07/14-56-31/.hydra/: config.yaml  (+1 more)
(+2 files in other folders)
